# Hiring

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile.web  Makefile  README.md  RUNBOOK.md  VaivammHire-PRD.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-aws-pipeline.yml  deploy-prod.yml  deploy-staging.yml  e2e.yml  ml-eval.yml  ml-train.yml  rotate-secrets.yml
scripts/: aws-setup.sh  destroy.sh  docker-entrypoint-web.sh  lib.sh  preflight.sh  print-urls.sh  run-local.sh  seed-admin.sh
vaivammhire-app/: .env.example  .gitignore  CLAUDE.md  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  open-next.config.ts  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
vaivammhire-app/app/: layout.tsx  providers.tsx
vaivammhire-app/app/(admin)/: layout.tsx
vaivammhire-app/app/(public)/: layout.tsx  page.tsx
vaivammhire-app/components/: motion.tsx
vaivammhire-app/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
vaivammhire-app/lib/: env.ts  org.ts  questionnaire.ts
vaivammhire-app/scripts/: seed-dev.ts
vaivammhire-app/server/auth/: dev-token.ts
vaivammhire-app/server/db/: audit.ts  index.ts  schema.ts
vaivammhire-app/server/services/: bedrock.ts  comprehend.ts  ml-api.ts  promotion-gate.ts  router.ts  s3.ts  scheduling.ts  screening-pipeline.ts  ses.ts  share-links.ts  textract.ts
vaivammhire-app/server/trpc/: auth.ts  client.tsx  context.ts  init.ts
vaivammhire-app/styles/: globals.css  tokens.css
vaivammhire-app/tests/: setup.ts
vaivammhire-app/tests/e2e/: admin.spec.ts  apply.spec.ts
vaivammhire-app/tests/unit/: bedrock-extract-json.test.ts  promotion-gate.test.ts  slugify.test.ts  (+1 more)
vaivammhire-infra/: .gitignore  CLAUDE.md  cdk.json  package.json  tsconfig.json
vaivammhire-infra/lib/: ai-stack.ts  auth-stack.ts  compute-stack.ts  data-stack.ts  frontend-stack.ts  network-stack.ts  observability-stack.ts
vaivammhire-ml/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
vaivammhire-ml/containers/: train.Dockerfile
vaivammhire-ml/eval/: golden_set.jsonl  run_eval.py
vaivammhire-ml/inference/: ner_lambda.py  server.py  spam_lambda.py
vaivammhire-ml/models/dedup/: __init__.py  dedup.py
vaivammhire-ml/models/embeddings/: train.py
vaivammhire-ml/models/fit_classifier/: train.py
vaivammhire-ml/models/ner/: Dockerfile  train.py
vaivammhire-ml/models/spam/: __init__.py  train.py
vaivammhire-ml/pipelines/: ner_pipeline.py
vaivammhire-ml/tests/: test_dedup.py  test_fit_features.py  test_spam_features.py
(+50 files in other folders)
