[project]
name = "vaivammhire-ml"
version = "0.1.0"
description = "Track B — custom ML/NLP models for VaivammHire (PRD §7)."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "boto3>=1.35",
    "sagemaker>=2.232",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "xgboost>=2.1",
    "spacy>=3.8",
    "transformers>=4.46",
    "sentence-transformers>=3.3",
    "datasketch>=1.6",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "pydantic>=2.9",
    "numpy>=2.1",
    "pandas>=2.2",
    "dvc[s3]>=3.55",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "models", "eval"]
addopts = "-q"
