[project]
name = "vaivammhire-ml"
version = "0.1.0"
description = "Track B — custom ML/NLP models for VaivammHire (PRD §7)."
requires-python = ">=3.11"
readme = "README.md"

# Core dependencies — installed by everything (CI tests, lambda inference,
# local development). Heavy ML libraries (torch, transformers, sagemaker,
# spacy, etc.) live in the [training] extra so CI is fast and Lambda cold
# starts stay reasonable.
dependencies = [
    "boto3>=1.35",
    "datasketch>=1.6",
    "numpy>=2.1",
    "pandas>=2.2",
    "pydantic>=2.9",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
# Heavy ML stack — only the nightly SageMaker training pipeline needs these.
training = [
    "dvc[s3]>=3.55",
    "lightgbm>=4.5",
    "onnx>=1.17",
    "onnxruntime>=1.20",
    "sagemaker>=2.232",
    "sentence-transformers>=3.3",
    "spacy>=3.8",
    "transformers>=4.46",
    "xgboost>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "eval", "pipelines", "inference"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
